Updates for adding/updating/deleting creds in ADLA

--- a/src/ResourceManager/DataLakeAnalytics/Commands.DataLakeAnalytics/Commands.DataLakeAnalytics.csproj
+++ b/src/ResourceManager/DataLakeAnalytics/Commands.DataLakeAnalytics/Commands.DataLakeAnalytics.csproj
@@ -117,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\GetAzureRmDataLakeAnalyticsDataSource.cs" />
+    <Compile Include="Commands\RemoveAzureRmDataLakeAnalyticsCatalogCredential.cs" />
+    <Compile Include="Commands\SetAzureRmDataLakeAnalyticsCatalogCredential.cs" />
+    <Compile Include="Commands\NewAzureRmDataLakeAnalyticsCatalogCredential.cs" />
     <Compile Include="Commands\RemoveAzureRmDataLakeAnalyticsCatalogSecret.cs" />
     <Compile Include="Commands\SetAzureRmDataLakeAnalyticsCatalogSecret.cs" />
     <Compile Include="Commands\NewAzureRmDataLakeAnalyticsCatalogSecret.cs" />
